<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#242424"
    app:bbn_itemColorActive="@color/colorAccent"
    app:bbn_itemColorInactive="@color/grey"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_rippleColor="#242424">
    <item
        android:id="@+id/bbn_item1"
        android:color="#141414"
        android:icon="@drawable/logos"
        android:title="Home" />
    <item
        android:id="@+id/bbn_item2"
        android:color="#141414"
        android:icon="@drawable/popular"
        android:title="Search" />
    <item
        android:id="@+id/bbn_item3"
        android:color="#141414"
        android:icon="@drawable/playbutton"
        android:title="Watchlist" />
</menu>