...
                android:layout_height="wrap_content"
                app:showFullScreenButton="false" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/container"
            android:layout_below="@id/youtubePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_9sdp"
            android:orientation="horizontal">

...
                    android:scaleY="0.5"
                    android:theme="@style/RatingBar"
                    android:transformPivotX="@dimen/_10sdp"
                    android:transformPivotY="0dp" />

                <Button
                    android:id="@+id/favButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/layout_rounded_corner"
                    android:text="Add to watchlist"/>


            </LinearLayout>
        </LinearLayout>

        <!-- BEGINNING BLOCK -->
...
