...

        </LinearLayout>
        <FrameLayout
            android:layout_below="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"
            android:layout_above="@id/bottombar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </FrameLayout>

        <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottombar"
            android:orientation="vertical">
                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:background="@color/dark"
                    android:id="@+id/BottomNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_gravity="bottom"
                    app:itemBackground="@color/dark"
                    android:foreground="?attr/selectableItemBackground"
...
